<resources>
    <string name="app_name">ObjectDetection</string>
    <string name="action_settings">Settings</string>
    <string name="menu_learning_preferences"> Learning Preferences</string>
    <string name="menu_recognition_preferences">Recognition Preferences</string>
    <string name="menu_db_view">DB View</string>
    <string name="about_dialog_title">About Neurotechnology</string>
    <string name="msg_about_company">Neurotechnology</string>
    <string name="msg_enroll">Enroll</string>
    <string name="msg_name_empty">Template must have a name.</string>
    <string name="msg_hold_on">Hold on, I am processing...</string>
    <string name="msg_metadata">Metadata</string>
    <string name="msg_name">Name</string>
    <string name="msg_score">Score</string>
    <string name="msg_learning_in_progress">Learning in progress</string>
    <string name="msg_recognition_in_progress">Recognition in progress</string>
    <string name="msg_loading_image">Loading image</string>
    <string name="msg_initializing_engine">Initializing engine</string>
    <string name="msg_no_objects_recognised">No objects recognised</string>
    <string name="msg_invalid_shape">Invalid shape.</string>
    <string name="format_learning_successfull_quality">Successfully learned. Quality: %1$d.</string>
    <string name="msg_learning_failed">Learning failed</string>
    <string name="msg_learning_error">Error occurred during learning</string>
    <string name="msg_recognition_error">Error occurred during recognition</string>
    <string name="msg_recognition_needs_an_image">Recognition needs an image</string>
    <string name="msg_recognition_sentisight_not_activated">Unable to perform recognition. SentiSight not activated.</string>
    <string name="app_preferences">SentiSightPreferences</string>
    <string name="preferences_learning_enable_mask_enhancements">Enable mask enhancements</string>
    <string name="preferences_learning_mode">Mode</string>
    <string name="preferences_learning_feature_type">Feature type</string>
    <string name="preferences_learning_shape_scaling_level">Shape scaling level</string>
    <string name="preferences_learning_image_rescale_factor">Image rescale factor</string>
    <string name="preferences_learning_use_color_information">Use color information</string>
    <string name="preferences_recognition_feature_type">Feature type</string>
    <string name="preferences_recognition_shape_scaling_level">Shape scaling level</string>
    <string name="preferences_recognition_image_rescale_factor">Image rescale factor</string>
    <string name="preferences_recognition_matching_threshold">Matching threshold</string>
    <string name="preferences_recognition_speed">Recognition speed</string>
    <string name="preferences_recognition_use_tracking">Use tracking</string>
    <string name="preferences_recognition_transform_type">Transform type</string>
    <string name="preferences_recognition_use_auto_recognise">Use auto recognise</string>
    <string name="preferences_recognition_use_color_information">Use color information</string>
    <string name="preferences_reset_to_defaults">Set default values</string>
    <string name="preferences_reset_to_defaults_summary">Sets all preferences to factory defaults</string>
    <string name="label_shared_user">com.neurotec.samples</string>
    <string name="msg_return">Return</string>
    <string name="msg_undo">Undo</string>
    <string name="msg_clear">Clear</string>
    <string name="msg_recognise">Recognise</string>
    <string name="msg_select_image">Load</string>
    <string name="msg_learn">Learn</string>
    <string name="header_from_devices">Devices</string>
    <string name="header_from_camera">Load from camera</string>
    <string name="header_from_memory">Memory</string>
    <string name="header_from_file">Load from file</string>
    <string name="msg_could_not_create_directory">Could not create directory.</string>
    <string name="label_delete">Delete</string>
    <string name="label_modify">Modify</string>
    <string name="label_rename">Rename</string>
    <string name="label_ok">OK</string>
    <string name="label_no">No</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_record_name">Name</string>
    <string name="label_yes">Yes</string>
    <string name="label_model_name">Name:</string>
    <string name="label_model_images_number">Number of images contained:</string>
    <string name="label_add_new">Add new model</string>
    <string name="msg_db_empty">Database is empty</string>
    <string name="msg_db_entry_delete_question">Are you sure you want to delete this model?</string>
    <string name="msg_db_deleting_image_will_delete_model_question">By deleting the last image you will also delete this model. Are you sure?</string>
    <string name="msg_db_name_exists">Model with this name already exists.</string>
    <string name="msg_db_access_error">Error accessing database</string>
    <string name="msg_about">About</string>
    <string name="msg_add_license_files">Add license files</string>
    <string name="msg_add">Add</string>
    <string name="msg_all_components_activated">All components are activated</string>
    <string name="msg_activate">Activate</string>
    <string name="msg_activate_online">Would you like to activate ID online?</string>
    <string name="msg_activated_components">Activated components</string>
    <string name="msg_activating">Activating...</string>
    <string name="msg_activation">Activation</string>
    <string name="msg_activation_info">Activation info</string>
    <string name="msg_activation_succeeded">Activation succeeded</string>
    <string name="msg_activation_failed">Activation failed</string>
    <string name="msg_cancel">Cancel</string>
    <string name="msg_close">Close</string>
    <string name="msg_company_info">Vendor: %1$s\nVersion: %2$s\nCopyright \u00a9 2012 - 2016 Neurotechnology</string>
    <string name="msg_company_name">Neurotechnology</string>
    <string name="msg_copyright">Copyright \u00a9 2016 Neurotechnology</string>
    <string name="msg_connected">Connected</string>
    <string name="msg_connection">Connection</string>
    <string name="msg_crash_toast_text">The application has crashed. Please see the notification for more information.</string>
    <string name="msg_crash_notif_ticker_text">Unexpected error, please send a report...</string>
    <string name="msg_crash_notif_text">Please click here to help fix the issue.</string>
    <string name="msg_crash_dialog_text">An unexpected error occurred forcing the application to stop.
		Please help us to fix this by sending an email to support@neurotechnology.com with the report file attached.
		The report file will be saved to \'sdcard/Neurotechnology/Reports\' folder once you press \'OK\' button.
	</string>
    <string name="msg_crash_dialog_comment_prompt">You might add your comments about the problem below:</string>
    <string name="msg_crash_dialog_ok_toast">Thank you!</string>
    <string name="msg_deactivate">Deactivate</string>
    <string name="msg_deactivating">Deactivating...</string>
    <string name="msg_deactivation">Deactivation</string>
    <string name="msg_deactivation_succeeded">Deactivation succeeded</string>
    <string name="msg_deactivation_failed">Deactivation failed</string>
    <string name="msg_details">Details...</string>
    <string name="msg_exit">Exit</string>
    <string name="msg_generate">Generate</string>
    <string name="msg_generating">Generating ID...</string>
    <string name="msg_generation_succeeded">ID was successfully generated and stored in SD Card/Neurotechnology/Licenses directory</string>
    <string name="msg_generation_failed">ID generation failed</string>
    <string name="msg_internet_connection">Internet connection</string>
    <string name="msg_internet_connection_status">Connection status</string>
    <string name="msg_internet_connection_type">Connection type</string>
    <string name="msg_licensing_service">Licensing service</string>
    <string name="msg_format_licensing_service_report_was_saved">Licensing service report was saved to file %1$s</string>
    <string name="msg_loading_resources">Loading resources...</string>
    <string name="msg_loaded_modules">Loaded modules</string>
    <string name="msg_no">No</string>
    <string name="msg_no_activated_components">No activated components</string>
    <string name="msg_no_internet_connection">Unable to connect to the Internet</string>
    <string name="msg_no_internet_connection_still_proceed">Unable to connect to the Internet. Do you want to proceed?</string>
    <string name="msg_reobtain_licenses_question">Changes to licenses were made. Do you wish to perform reobtain?</string>
    <string name="msg_no_loaded_modules">No loaded modules</string>
    <string name="msg_no_loaded_plugins">No loaded plugins</string>
    <string name="msg_not_activated_components">Not activated components</string>
    <string name="msg_not_connected">Not connected</string>
    <string name="msg_not_recognized_file_loading_type">Unrecognized file loading type</string>
    <string name="msg_third_party_file_loading_app_failed">Selected source loading app failed</string>
    <string name="msg_settings_reset">Settings have been reset</string>
    <string name="msg_ok">OK</string>
    <string name="msg_operation_is_not_activated">Operation is not activated</string>
    <string name="msg_plugins">Plugins</string>
    <string name="msg_protection_governor">Protection governor</string>
    <string name="msg_proceed_activation_online">Device id\'s were generated: %s. Please proceed activation online by using site: http://www.neurotechnology.com/software_activation.html. Alternatively, id files can be sent to Neurotechnology (support@neurotechnology.com) or distributor from which SDK was acquired</string>
    <string name="msg_proceed_deactivation_online">Deactivation id\'s were generated: %s. Please proceed deactivation online by using site: http://www.neurotechnology.com/cgi-bin/nlz.cgi. Alternatively, id files can be sent to Neurotechnology (support@neurotechnology.com) or distributor from which SDK was acquired</string>
    <string name="msg_no_serial_numbers">There are no serial numbers in directory</string>
    <string name="msg_no_licenses">There are no licenses in directory</string>
    <string name="msg_not_running">Not running</string>
    <string name="msg_remove">Remove</string>
    <string name="msg_reset_to_defaults">Set default values</string>
    <string name="msg_reset_to_defaults_summary">Sets all preferences to factory defaults</string>
    <string name="msg_serial_numbers">Serial numbers</string>
    <string name="msg_status_format">Status: %1$s</string>
    <string name="msg_yes">Yes</string>
    <string name="msg_service">Service</string>
    <string name="msg_configure">Configure</string>
    <string name="msg_configuration">Configuration</string>
    <string name="msg_format_configuration">Configuration:\n%1$s</string>
    <string name="msg_format_log">Log:\n%1$s</string>
    <string name="msg_format_status">Status: %1$s</string>
    <string name="msg_format_trial">Trial: %1$s</string>
    <string name="msg_generate_report">Generate report</string>
    <string name="msg_log">Log</string>
    <string name="msg_obtain">Obtain</string>
    <string name="msg_release">Release</string>
    <string name="msg_start">Start</string>
    <string name="msg_starting_service">Starting service</string>
    <string name="msg_stopping_service">Stopping service</string>
    <string name="msg_restarting_service">Restarting service</string>
    <string name="msg_stop">Stop</string>
    <string name="msg_status">Status</string>
    <string name="msg_trial">Trial</string>
    <string name="msg_updating">Updating…</string>
    <string name="msg_unknown">Unknown</string>
    <string name="title_image_input_source_activity">Pick an image</string>
</resources>