<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/scroll_view"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:fillViewport="true"
	android:minWidth="200dp"
	android:scrollbars="vertical" >

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:paddingLeft="10dp"
		android:paddingBottom="10dp"
		android:paddingRight="10dp" >

		<LinearLayout
			android:id="@+id/layout_record"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:orientation="vertical" >

			<TextView
				android:id="@+id/text_view_record_name"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/label_record_name"
				android:textAppearance="?android:attr/textAppearanceMedium" />

			<EditText
				android:id="@+id/edit_text_record_name"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:inputType="text" >
				<requestFocus />
			</EditText>
		</LinearLayout>

		<LinearLayout
			android:id="@+id/layout_buttons"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="20dp"
			android:gravity="bottom" >

			<Button
				android:id="@+id/button_ok"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text="@string/label_ok" />

			<Button
				android:id="@+id/button_cancel"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text="@string/label_cancel" />
		</LinearLayout>
	</LinearLayout>

</ScrollView>